--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "estacionamiento-frontend": "file:",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.8.4"
+    "vuetify": "^3.8.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
